Revision history for plv8

2.3.4       2018-05-07
            - add execution timeout support to windows
            - add automatic creation of update files on macos/linux/unix

2.3.3       2018-04-27
            - added upgrade scripts
            - added cancelling signal support on macos/linux/unix

2.3.2       2018-04-13
            - moved permissions check into a PG_TRY/PG_CATCH block
            - updated external startup compilation to include v8 >= 5.0

2.3.1       2018-03-07
            - add optional functionality for execution timeouts

2.3.0       2018-02-12
            - track v8 6.4.388.40
            - change build system
            - force static to be default build

2.1.0       2017-07-05
            - track v8 5.8.301
            - better error handling

2.0.0       2017-02-02
            - track v8 5.4.500.43

2.0.0-dev
            - track v8 4.4-4.10
            - add plv8_version()

1.5.1       2016-03-27
            - add fix for current resource owner

1.5.0       2016-02-26
            - Adaptions for current V8 version, e.g. 4.1.0.x - 4.3.66
              (see http://strongloop.com/strongblog/node-js-v0-12-c-apis-breaking/
              for an overview of the V8 changes which break existing code bases)
            - GUC plv8.v8_flags for V8 engine initialization flags
            - Fixed crash in ArrayBuffer
            - Fixed encoding issues with elog
            - Fixed memory leak in cursor fetch
            - Errors return full error context as an object now
            - Fixed crash bug in cursor fetch

1.4.4       2015-05-26
            - Add jsonb type coercion in function boundary.
            - Fix crash related to FLEXIBLE_ARRAY_MEMBER changes.

1.4.3       2015-02-02
            - Fix compilation for 9.4
            - Fix off-by-one in variadic .execute handling
            - Add .gitignore
            - Fix incorrect code in return_next
            - Mark NULL in converter even for dropped columns to prevent crash.
