@@ -2,7 +2,7 @@
     "name": "plv8",
     "abstract": "A procedural language in JavaScript powered by V8",
     "description": "plv8 is a trusted procedural language that is safe to use, fast to run and easy to develop.",
-    "version": "2.3.3",
+    "version": "2.3.4",
     "maintainer": [
         "Jerry Sievert <code@legitimatesounding.com>"
     ],
@@ -23,21 +23,21 @@
     },
     "provides": {
         "plv8": {
-            "file": "plv8--2.3.3.sql",
-            "docfile": "README.md",
-            "version": "2.3.3",
+            "file": "plv8--2.3.4.sql",
+            "docfile": "docs/PGXN.md",
+            "version": "2.3.4",
             "abstract": "A procedural language in JavaScript"
          },
         "plcoffee": {
-            "file": "plcoffee--2.3.3.sql",
-            "docfile": "README.md",
-            "version": "2.3.3",
+            "file": "plcoffee--2.3.4.sql",
+            "docfile": "docs/PGXN.md",
+            "version": "2.3.4",
             "abstract": "A procedural language in CoffeeScript"
          },
         "plls": {
-            "file": "plls--2.3.3.sql",
-            "docfile": "README.md",
-            "version": "2.3.3",
+            "file": "plls--2.3.4.sql",
+            "docfile": "docs/PGXN.md",
+            "version": "2.3.4",
             "abstract": "A procedural language in LiveScript"
          }
     },
